Revert "Turn all 3282s into $"
This reverts commit 116b2a9e79673aca228ce5ace4a16cc0ad0be04d.

--- a/examples/qr-generator/toolpad/pages/qrcode/page.yml
+++ b/examples/qr-generator/toolpad/pages/qrcode/page.yml
@@ -20,7 +20,7 @@ spec:
           name: qrcodeDisplay
           props:
             src:
-              $jsExpression: |
+              $$jsExpression: |
                 qrImage.data
             fit: none
   queries:
@@ -31,5 +31,5 @@ spec:
       parameters:
         - name: content
           value:
-            $jsExpression: |
+            $$jsExpression: |
               input.value
