Needed more fixing

--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
@@ -11,7 +11,7 @@ spec:
           name: button
           props:
             onClick:
-              $navigationAction:
+              $$navigationAction:
                 page:
                   $ref: au03sef
                 parameters:
