--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "workspaces": {
     "packages": [
       "packages/*",
-      "docs"
+      "docs",
+      "examples/hacker-news-client"
     ],
     "nohoist": [
       "docs",
