--- a/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
+++ b/test/integration/bindings/fixture-navigation/toolpad/pages/page1/page.yml
@@ -12,8 +12,7 @@ spec:
           props:
             onClick:
               $$navigationAction:
-                page:
-                  $ref: au03sef
+                page: au03sef
                 parameters:
                   abc: zyx
                   def:
