--- a/test/integration/backend-basic/fixture/toolpad/pages/extractedTypes/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/extractedTypes/page.yml
@@ -10,8 +10,33 @@ spec:
       children:
         - component: Text
           name: text
+          props:
+            value:
+              $$jsExpression: |
+                `bare function with parameters: ${bareWithParams.data?.message}`
+    - component: PageRow
+      name: pageRow1
+      children:
+        - component: Text
+          name: text1
+          props:
+            value:
+              $$jsExpression: |
+                `synchronous function: ${syncFunction.data?.message}`
   queries:
     - name: bareWithParams
       query:
         function: bareWithParams
+        kind: local
+      parameters:
+        - name: foo
+          value: bar
+        - name: bar
+          value: 42
+        - name: baz
+          value:
+            hello: 5
+    - name: syncFunction
+      query:
+        function: syncFunction
         kind: local
