--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "release:publish-canary": "yarn && yarn release:build && lerna publish from-package --force-publish --no-git-tag-version --no-push --no-git-reset --pre-dist-tag canary",
     "release:changelog": "dotenv -- node ./scripts/releaseChangelog.mjs --repo mui-toolpad",
     "test:build": "lerna run build --scope @mui/toolpad-core --scope @mui/toolpad-components --stream",
-    "test:integration": "rm -rf ./node_modules/.vite && playwright test --config ./test/playwright.config.ts",
+    "test:integration": "rimraf ./node_modules/.vite && playwright test --config ./test/playwright.config.ts",
     "test": "lerna run test",
     "check-types": "lerna run check-types",
     "toolpad": "toolpad",
