--- a/test/integration/backend-basic/fixture/toolpad/pages/basic/page.yml
+++ b/test/integration/backend-basic/fixture/toolpad/pages/basic/page.yml
@@ -21,7 +21,7 @@ spec:
           props:
             value:
               $$jsExpression: |
-                `throws, error.message: ${throws.error.message}`
+                `throws, error.message: ${throws.error}`
     - component: PageRow
       name: pageRow2
       children:
@@ -110,6 +110,25 @@ spec:
             value:
               $$jsExpression: |
                 `global value: ${getGlobal.data}`
+    - component: PageRow
+      name: pageRow11
+      children:
+        - component: Text
+          name: text3
+          props:
+            value:
+              $$jsExpression: |
+                `Propagated error: ${errorInput.error}`
+    - component: PageRow
+      name: pageRow10
+      children:
+        - component: Text
+          name: text2
+          props:
+            value:
+              $$jsExpression: >
+                `Loading: ${alwaysLoading.isLoading}; Propagated loading:
+                ${propagatedLoading.isLoading}`
   queries:
     - name: hello
       query:
@@ -155,3 +174,27 @@ spec:
       query:
         function: getGlobal
         kind: local
+    - name: errorInput
+      query:
+        function: echo
+        kind: local
+      parameters:
+        - name: foo
+          value:
+            $$jsExpression: |
+              (() => {
+                throw new Error("KABOOM!")
+              })()
+    - name: alwaysLoading
+      query:
+        function: neverResolving
+        kind: local
+    - name: propagatedLoading
+      query:
+        function: echo
+        kind: local
+      parameters:
+        - name: foo
+          value:
+            $$jsExpression: |
+              alwaysLoading.data
