--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
+    "@mui/material": "5.13.5",
     "@mui/toolpad-utils": "0.1.16",
     "@tanstack/react-query": "4.29.14",
     "@types/json-schema": "^7.0.12",
