--- a/docs/data/toolpad/reference/components/manifest.json
+++ b/docs/data/toolpad/reference/components/manifest.json
@@ -66,6 +66,10 @@
           "pathname": "/toolpad/reference/components/stack"
         },
         {
+          "title": "Statistic",
+          "pathname": "/toolpad/reference/components/statistic"
+        },
+        {
           "title": "Tabs",
           "pathname": "/toolpad/reference/components/tabs"
         },
