--- a/examples/npm-stats/package.json
+++ b/examples/npm-stats/package.json
@@ -8,6 +8,7 @@
     "start": "toolpad start"
   },
   "dependencies": {
-    "@mui/toolpad": "0.1.14"
+    "@mui/toolpad": "0.1.14",
+    "recharts": "2.7.2"
   }
 }
