--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -65,6 +65,7 @@
     "@tanstack/react-query": "4.29.14",
     "@tanstack/react-query-devtools": "4.29.14",
     "@types/cors": "2.8.13",
+    "@types/node": "20.2.5",
     "@types/react-dev-utils": "9.0.11",
     "@vitejs/plugin-react": "4.0.0",
     "abort-controller": "3.0.0",
@@ -106,6 +107,7 @@
     "path-to-regexp": "6.2.1",
     "perf-cascade": "3.0.3",
     "pg": "8.11.0",
+    "piscina": "4.0.0",
     "prettier": "2.8.8",
     "pretty-bytes": "6.1.0",
     "react": "18.2.0",
@@ -122,6 +124,7 @@
     "serialize-javascript": "6.0.1",
     "ses": "0.18.4",
     "superjson": "1.12.3",
+    "typescript": "5.1.3",
     "vite": "4.3.9",
     "whatwg-url": "13.0.0",
     "ws": "8.13.0",
