--- a/examples/google-sheet/toolpad/pages/page/page.yml
+++ b/examples/google-sheet/toolpad/pages/page/page.yml
@@ -19,43 +19,43 @@ spec:
               $$jsExpression: |
                 query.data
             columns:
-              - field: "0"
+              - field: '0'
                 type: string
-              - field: "1"
+              - field: '1'
                 type: string
-              - field: "2"
+              - field: '2'
                 type: string
-              - field: "3"
+              - field: '3'
                 type: string
-              - field: "4"
+              - field: '4'
                 type: string
-              - field: "5"
+              - field: '5'
                 type: string
-              - field: "6"
+              - field: '6'
                 type: string
-              - field: "7"
+              - field: '7'
                 type: string
-              - field: "8"
+              - field: '8'
                 type: string
-              - field: "9"
+              - field: '9'
                 type: string
-              - field: "10"
+              - field: '10'
                 type: string
-              - field: "11"
+              - field: '11'
                 type: string
-              - field: "12"
+              - field: '12'
                 type: string
-              - field: "13"
+              - field: '13'
                 type: string
-              - field: "14"
+              - field: '14'
                 type: string
-              - field: "15"
+              - field: '15'
                 type: string
-              - field: "16"
+              - field: '16'
                 type: string
-              - field: "17"
+              - field: '17'
                 type: string
-              - field: "18"
+              - field: '18'
                 type: string
-              - field: "19"
+              - field: '19'
                 type: string
