Normalize some paths, use shell in spawn sync (DTS was not working)

--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsup && tsc --emitDeclarationOnly --declaration",
+    "build": "tsup",
     "dev": "tsup --watch",
     "check-types": "tsup && tsc --noEmit"
   },
