--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -33,7 +33,7 @@
   },
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsup && tsc --emitDeclarationOnly --declaration",
+    "build": "tsup",
     "dev": "tsup --watch",
     "check-types": "tsup && tsc --noEmit"
   },
