--- a/packages/toolpad-components/package.json
+++ b/packages/toolpad-components/package.json
@@ -50,7 +50,8 @@
     "lodash-es": "4.17.21",
     "markdown-to-jsx": "7.2.1",
     "react-error-boundary": "4.0.10",
-    "react-hook-form": "7.45.1"
+    "react-hook-form": "7.45.1",
+    "recharts": "2.7.2"
   },
   "devDependencies": {
     "react": "18.2.0"
