Use vite for Toolpad editor (#1999)
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint && prettier --check .",
     "fix": "next lint --fix && prettier --write .",
     "build:cli": "tsup",
+    "build:editor": "vite build ./src/toolpad",
     "build:next": "cross-env NODE_OPTIONS=--max-old-space-size=8192 next build",
     "build:typings": "tsx ./scripts/typings.mts",
     "dev:cli": "tsup --watch",
@@ -125,6 +126,7 @@
     "typescript": "5.1.6",
     "vite": "4.3.9",
     "whatwg-url": "13.0.0",
+    "vm-browserify": "^1.1.2",
     "ws": "8.13.0",
     "yaml": "2.3.1",
     "yaml-diff-patch": "2.0.0",
