Resolve components from source for docs:build:api (#2280)

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -1,9 +1,18 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@mui/toolpad-components": ["../packages/toolpad-components/src/index.tsx"],
+      "@mui/toolpad-core": ["../packages/toolpad-core/src/index.tsx"],
+      "@mui/toolpad-utils/*": [
+        "../packages/toolpad-utils/src/*.tsx",
+        "../packages/toolpad-utils/src/*.ts"
+      ]
+    },
     "module": "CommonJS",
     "noEmit": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "jsx": "react"
   }
 }
