images aspect ratio 1.8090

--- a/examples/npm-stats/toolpad/pages/page/page.yml
+++ b/examples/npm-stats/toolpad/pages/page/page.yml
@@ -174,3 +174,4 @@ spec:
                 type: number
                 width: 152
                 headerName: No. of downloads
+  display: standalone
