Add Metric component (#2202)
Signed-off-by: Jan Potoms <2109932+Janpot@users.noreply.github.com>

--- a/docs/data/toolpad/reference/components/manifest.json
+++ b/docs/data/toolpad/reference/components/manifest.json
@@ -46,6 +46,10 @@
           "pathname": "/toolpad/reference/components/list"
         },
         {
+          "title": "Metric",
+          "pathname": "/toolpad/reference/components/metric"
+        },
+        {
           "title": "PageColumn",
           "pathname": "/toolpad/reference/components/page-column"
         },
