--- a/packages/toolpad-core/package.json
+++ b/packages/toolpad-core/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/mui/mui-toolpad/issues"
   },
   "dependencies": {
+    "@mui/material": "5.14.0",
     "@mui/toolpad-utils": "0.1.20",
     "@tanstack/react-query": "4.29.19",
     "@types/json-schema": "^7.0.12",
