--- a/docs/data/toolpad/reference/components/manifest.json
+++ b/docs/data/toolpad/reference/components/manifest.json
@@ -18,6 +18,10 @@
           "pathname": "/toolpad/reference/components/button"
         },
         {
+          "title": "Chart",
+          "pathname": "/toolpad/reference/components/chart"
+        },
+        {
           "title": "Container",
           "pathname": "/toolpad/reference/components/container"
         },
