--- a/packages/toolpad-app/tsconfig.json
+++ b/packages/toolpad-app/tsconfig.json
@@ -22,18 +22,16 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react",
     "noUnusedLocals": true,
     "pretty": true,
     "preserveWatchOutput": true,
     "incremental": true
   },
   "include": [
-    "next.config.mjs",
-    "next-env.d.ts",
     "sentry.client.config.js",
     "sentry.server.config.js",
     "**/*.ts",
