--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -112,6 +112,7 @@
     "react-is": "18.2.0",
     "react-router-dom": "6.3.0",
     "react-split-pane": "0.1.92",
+    "recharts": "2.7.2",
     "semver": "7.5.4",
     "serialize-javascript": "6.0.1",
     "ses": "0.18.4",
