try with a lower memory limit

--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,7 @@ services:
     buildCommand: yarn && yarn build
     startCommand: yarn start
     pullRequestPreviewsEnabled: true
+    plan: standard
     envVars:
       - key: NODE_VERSION
         value: 16
