Update npm stats example

--- a/examples/npm-stats/toolpad/pages/page/page.yml
+++ b/examples/npm-stats/toolpad/pages/page/page.yml
@@ -91,7 +91,7 @@ spec:
         - component: PageColumn
           name: pageColumn
           layout:
-            columnSize: 1.5092592592592593
+            columnSize: 1
           children:
             - component: PageRow
               name: pageRow3
@@ -101,7 +101,7 @@ spec:
                 - component: TextField
                   name: textField
                   layout:
-                    columnSize: 1.5161290322580645
+                    columnSize: 1.519495690426327
                   props:
                     defaultValue: '@mui/toolpad'
                     label: package
@@ -109,7 +109,7 @@ spec:
                 - component: DatePicker
                   name: datePicker
                   layout:
-                    columnSize: 0.7352885584677419
+                    columnSize: 0.7369213121310025
                   props:
                     defaultValue:
                       $$jsExpression: |
@@ -121,7 +121,7 @@ spec:
                 - component: DatePicker
                   name: datePicker1
                   layout:
-                    columnSize: 0.7419354838709677
+                    columnSize: 0.7435829974426705
                   props:
                     label: until
                     fullWidth: true
@@ -139,16 +139,21 @@ spec:
                 `Total downloads: ${totalRange.data.downloads}`
             variant: body1
     - component: PageRow
-      name: pageRow2
+      name: pageRow7
       children:
-        - component: codeComponent.LineChart
-          name: codeComponent_LineChart
+        - component: Chart
+          name: downloadsChart
           props:
             data:
-              $$jsExpression: |
-                downloadsRange.data.downloads
-            series:
-              - downloads
+              - kind: line
+                label: downloads
+                data:
+                  $$jsExpression: |
+                    downloadsRange.data.downloads
+                xKey: day
+                yKey: downloads
+                color: "#87bc45"
+            height: 346
     - component: PageRow
       name: pageRow4
       children:
@@ -166,11 +171,11 @@ spec:
               $$jsExpression: |
                 Object.entries(versionLastWeek.data.downloads)
             columns:
-              - field: '0'
+              - field: "0"
                 type: string
                 headerName: Version
                 width: 160
-              - field: '1'
+              - field: "1"
                 type: number
                 width: 152
                 headerName: No. of downloads
