--- a/packages/toolpad-app/package.json
+++ b/packages/toolpad-app/package.json
@@ -106,6 +106,7 @@
     "react": "18.2.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-draggable": "4.4.5",
     "react-error-boundary": "4.0.10",
     "react-hook-form": "7.45.2",
     "react-inspector": "5.1.1",
